--- a/views/layout/layout.hbs
+++ b/views/layout/layout.hbs
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" href="../stylesheets/my-orders.css" type="text/css">
-    <link rel="stylesheet" href="../stylesheets/products.css" type="text/css">
+    {{!-- <link rel="stylesheet" href="../stylesheets/products.css" type="text/css"> --}}
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.3/css/jquery.dataTables.min.css">
     <script src="https://cdn.datatables.net/1.13.3/js/jquery.dataTables.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans">
