--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,7 +1,7 @@
 <header>
   <nav class="navbar navbar-expand-lg" style="background-color: #4784ff">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img style="width: 100px;" src="/logo/logo3.png" alt="SHOPIFY"></a>
+      <a class="navbar-brand" href="/"><img style="width: 100px;" src="/logo/logo4.png" alt="iCart"></a>
       <button
         class="navbar-toggler"
         type="button"
