--- a/public/stylesheets/products.css
+++ b/public/stylesheets/products.css
@@ -11,7 +11,7 @@ h2 {
 	position: relative;
 	margin: 30px 0 60px;
 }
-h2::after {
+.featured h2::after {
 	content: "";
 	width: 100px;
 	position: absolute;
