--- a/views/user/products.hbs
+++ b/views/user/products.hbs
@@ -1,7 +1,7 @@
 <section class="product-body">
   <div class="container-xl">
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-12 featured">
         <h2>Featured <b>Products</b></h2>
         <div
           id="myCarousel"
