--- a/views/user/user-cart.hbs
+++ b/views/user/user-cart.hbs
@@ -15,7 +15,7 @@
 
                   {{#each cartProducts}}
 
-                  <div class="row mb-4 d-flex justify-content-between align-items-center">
+                  <div class="row mb-4 d-flex justify-content-between align-items-center cart-items">
                     <div class="col-md-2 col-lg-2 col-xl-2">
                       <img
                         src="/product-images/{{this.product._id}}.jpg"
