--- a/public/stylesheets/products.css
+++ b/public/stylesheets/products.css
@@ -1,5 +1,5 @@
 .product-body {
-	background: #e2eaef;
+	background: #f1f1f1;
 	font-family: "Open Sans", sans-serif;
 }
 h2 {
@@ -158,4 +158,99 @@ h2 {
 .star-rating i {
 	font-size: 14px;
 	color: #ffc000;
+}
+
+/* Recommended products styles */
+body {
+    margin: 0;
+    font-family: Roboto,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+    font-size: .8125rem;
+    font-weight: 400;
+    line-height: 1.5385;
+    color: #333;
+    text-align: left;
+    background-color: #2196F3;
+}
+
+.mt-50{
+
+    margin-top: 50px;
+}
+
+.mb-50{
+
+    margin-bottom: 50px;
+}
+
+
+
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .1875rem;
+}
+.imgcard-body img{
+	position: relative;
+    height: 250px;
+    width: auto;
+    left: 15%;
+}
+
+.card-img-actions {
+    position: relative;
+}
+.card-img-actions:hover {
+	transform: scale(1.15);
+}
+.card-body {
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    padding: 1.25rem;
+    text-align: center;
+}
+
+.card-img{
+
+    width: 350px;
+}
+
+.star{
+        color: red;
+}
+
+.bg-cart {
+    background-color:rgb(255, 255, 255);
+	border: 1px solid;
+	border-radius: 6px;
+	width: 9em;
+	height: 2.5em;
+    color: orange;
+}
+
+.bg-cart:hover {
+    background-color: orange;
+    color:#fff;
+}
+
+.bg-buy {
+    background-color:green;
+    color:#fff;
+    padding-right: 29px;
+}
+.bg-buy:hover {
+    
+    color:#fff;
+}
+
+a{
+
+    text-decoration: none !important;
 }
