--- a/views/admin/login.hbs
+++ b/views/admin/login.hbs
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
       <h2>Admin Login</h2>
       <form action="/admin/adminlogin" method="post">
-        <div class="form-outline col-md-12 col-12 mb-4">
+        <div class="form-outline mb-4">
           <input
             type="email"
             id="form2Example1"
