--- a/views/partials/admin-header.hbs
+++ b/views/partials/admin-header.hbs
@@ -1,7 +1,7 @@
-<header>
+<header class="header">
   <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid" style="background-color: #4784ff;height: 4rem">
-      <a class="navbar-brand" href="/"><img style="width: 100px;" src="/logo/logo3.png" alt="SHOPIFY"></a>
+      <a class="navbar-brand" href="/"><img style="width: 100px;" src="/logo/logo4.png" alt="iCart"></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -60,3 +60,10 @@
     </div>
   </nav>
 </header>
+<style>
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+</style>
