--- a/views/partials/user-header.hbs
+++ b/views/partials/user-header.hbs
@@ -1,4 +1,4 @@
-<header>
+<header class="header">
   <nav class="navbar navbar-expand-lg" style="background-color: #4784ff">
     <div class="container-fluid">
       <a class="navbar-brand" href="/"><img style="width: 100px;" src="/logo/logo4.png" alt="iCart"></a>
@@ -71,3 +71,10 @@
     </div>
   </nav>
 </header>
+<style>
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+}
+</style>
