--- a/views/partials/user-footer.hbs
+++ b/views/partials/user-footer.hbs
@@ -10,13 +10,11 @@
         <div class="row">
           <!-- Grid column -->
           <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-            <h6 class="text-uppercase mb-4 font-weight-bold">
-              Company name
+            <h6 class="mb-4 font-weight-bold">
+              iCart Pvt Ltd.
             </h6>
             <p>
-              Here you can use rows and columns to organize your footer
-              content. Lorem ipsum dolor sit amet, consectetur adipisicing
-              elit.
+              The complete online shopping platform.
             </p>
           </div>
           <!-- Grid column -->
@@ -27,16 +25,16 @@
           <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Products</h6>
             <p>
-              <a class="text-white">MDBootstrap</a>
+              <a class="text-white">Featured Products</a>
             </p>
             <p>
-              <a class="text-white">MDWordPress</a>
+              <a class="text-white">Grocery</a>
             </p>
             <p>
-              <a class="text-white">BrandFlow</a>
+              <a class="text-white">Electronics</a>
             </p>
             <p>
-              <a class="text-white">Bootstrap Angular</a>
+              <a class="text-white">Fashion</a>
             </p>
           </div>
           <!-- Grid column -->
@@ -49,13 +47,13 @@
               Useful links
             </h6>
             <p>
+              <a href="/" class="text-white">Home</a>
+            </p>
+            <p>
               <a class="text-white">Your Account</a>
             </p>
             <p>
-              <a class="text-white">Become an Affiliate</a>
-            </p>
-            <p>
-              <a class="text-white">Shipping Rates</a>
+              <a class="text-white">Shipping Partner</a>
             </p>
             <p>
               <a class="text-white">Help</a>
@@ -69,7 +67,7 @@
           <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
             <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
             <p><i class="fas fa-home mr-3"></i> New York, NY 10012, US</p>
-            <p><i class="fas fa-envelope mr-3"></i> info@gmail.com</p>
+            <p><i class="fas fa-envelope mr-3"></i> info@icart.com</p>
             <p><i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
             <p><i class="fas fa-print mr-3"></i> + 01 234 567 89</p>
           </div>
@@ -88,9 +86,9 @@
           <div class="col-md-7 col-lg-8 text-center text-md-start">
             <!-- Copyright -->
             <div class="p-3">
-              © 2020 Copyright:
-              <a class="text-white" href="https://mdbootstrap.com/"
-                 >MDBootstrap.com</a
+              © 2023 Copyright:
+              <a class="text-white" href="/"
+                 >icart.com</a
                 >
             </div>
             <!-- Copyright -->
